SPY-59: prevent horizontal overflow

--- a/app/(site)/component/carousel/carousel.scss
+++ b/app/(site)/component/carousel/carousel.scss
@@ -7,6 +7,7 @@
   background-color: map.get(colors.$base-color, black);
   padding: utils.bu(10) 0;
   display: flex;
+  overflow: hidden;
 
   @include mixins.breakpoint(lg) {
     padding: utils.bu(13) 0;
